--- a/packetd/Makefile
+++ b/packetd/Makefile
@@ -17,6 +17,10 @@ define Package/packetd
   SECTION:=net
   CATEGORY:=Network
   SUBMENU:=Firewall
+  DEPENDS:=+libnetfilter-conntrack +libnetfilter-queue +libnetfilter-log +libnavl +geoip-database \
+	  +iptables-mod-nfqueue +iptables-mod-conndict
+  KCONFIG:=CONFIG_NETFILTER_NETLINK_GLUE_CT=y CONFIG_NF_CT_NETLINK_HELPER=y \
+	  CONFIG_NF_CONNTRACK_DICT=y CONFIG_NF_CONNTRACK_DICT_LIVEPATCH=n
   TITLE:=Userspace packet processing daemon
   VERSION:=$(PKG_RELEASE)
   MAINTAINER:=Michael Hotz <mahotz@untangle.com>
